--- a/package.json
+++ b/package.json
@@ -53,9 +53,11 @@
     "react-helmet": "^6.1.0",
     "react-responsive-carousel": "^3.2.18",
     "react-share": "^4.4.0",
+    "react-slick": "^0.28.1",
     "react-twitter-widgets": "^1.9.5",
     "rehype-react": "^6.2.0",
     "request": "^2.88.2",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.0",
     "url-join": "^4.0.0"
   },
