--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -264,6 +264,7 @@ collections:
           - { label: "שם משפחה", name: "lastname", widget: "string" }
           - { label: "תמונה", name: "img", widget: "image" }
           - { label: "מיקום", name: "index", widget: "number" }
+          - { label: "תפקיד", name: "role", widget: "string" }
           - { label: "טקסט", name: "description", widget: "text" }
   - name: "products"
     label: "מוצרים חינוכיים"
