--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -260,8 +260,8 @@ collections:
         widget: list
         fields:
           - { label: "שם פנימי", name: "title", widget: "string" }
-          - { label: "שם", name: "firstname", widget: "string" }
-          - { label: "שם משפחה", name: "lastname", widget: "string" }
+          - { label: "שם", name: "firstName", widget: "string" }
+          - { label: "שם משפחה", name: "lastName", widget: "string" }
           - { label: "תמונה", name: "img", widget: "image" }
           - { label: "מיקום", name: "index", widget: "number" }
           - { label: "תפקיד", name: "role", widget: "string" }
